--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/tinyNode.js",
+    "start": "node ./bin/tinyPen.js",
     "test": "jest",
     "runtest": "node ./bin/testApp.js"
   },
