--- a/.github/workflows/cd_prod.yaml
+++ b/.github/workflows/cd_prod.yaml
@@ -48,9 +48,9 @@ jobs:
       - uses: actions/checkout@master
       - name: Deploy the app on the server
         run: |
-          if [[ ! -e /srv/node/logs/tinynode.txt ]]; then
+          if [[ ! -e /srv/node/logs/tinypen.txt ]]; then
               mkdir -p /srv/node/logs
-              touch /srv/node/logs/tinynode.txt
+              touch /srv/node/logs/tinypen.txt
           fi
           cd /srv/node/tiny-node/
           pm2 stop tinyPen
