--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "tinypen",
+  "type": "module",
   "version": "0.1.1",
   "private": true,
   "scripts": {
@@ -8,11 +9,9 @@
     "runtest": "node ./bin/testApp.js"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
-    "dotenv-expand": "^8.0.1",
     "envfile": "^7.1.0",
     "express": "^4.18.2",
     "got": "^11.8.3",
