--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
     "dotenv": "^10.0.0",
     "envfile": "^7.1.0",
     "express": "^4.18.2",
-    "http-errors": "~1.6.3",
-    "morgan": "~1.9.1",
-    "pug": "^3.0.1"
+    "http-errors": "~1.6.3"
   },
   "devDependencies": {
     "jest": "^29.7.0",
