--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node ./bin/tinyPen.js",
     "test": "jest",
-    "runtest": "node ./bin/testApp.js"
+    "runtest": "node --experimental-vm-modules ./bin/testApp.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
