--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "runtest": "node --experimental-vm-modules ./bin/testApp.js"
   },
   "dependencies": {
+    "@jest/globals": "^29.7.0",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
     "envfile": "^7.1.0",
-    "express": "^4.18.2",
-    "http-errors": "~1.6.3"
+    "express": "^4.21.2",
+    "http-errors": "~1.6.3",
+    "jest-cli": "^29.7.0"
   },
   "devDependencies": {
     "jest": "^29.7.0",
