upgrade node version in workflows

--- a/.github/workflows/cd_dev.yaml
+++ b/.github/workflows/cd_dev.yaml
@@ -21,6 +21,8 @@ jobs:
       - merge-branch
     strategy:
       matrix:
+        node-version:
+          - 22
         machines:
           - vlcdhp02
     runs-on: ${{ matrix.machines }}
