--- a/.github/workflows/cd_prod.yaml
+++ b/.github/workflows/cd_prod.yaml
@@ -6,6 +6,8 @@ jobs:
   deploy:
     strategy:
       matrix:
+        node-version:
+          - 22
         machines:
           - vlcdhprdp01
     runs-on: ${{ matrix.machines }}
