--- a/.github/workflows/cd_dev.yaml
+++ b/.github/workflows/cd_dev.yaml
@@ -28,7 +28,7 @@ jobs:
     runs-on: ${{ matrix.machines }}
     steps:
       - uses: actions/checkout@master
-      - name: Deploy the app on the server.
+      - name: Deploy the app on the server
         run: |
           if [[ ! -e /srv/node/logs/tinypen.txt ]]; then
               mkdir -p /srv/node/logs
